--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
 img {max-width: 100%;}
 h1, h2, h3, h4, h5 {margin: 0 0 20px; font-weight: 400; line-height: 1.3em;}
 h2 {font-size: 42px; font-weight: 600;}
-h3 {margin-bottom: 30px; font-size: 34px; font-weight: 500; text-align: center;}
+h3 {margin-bottom: 30px; font-size: 32px; font-weight: 500; text-align: center;}
 h5 {margin: 5px 0 10px; font-size: 18px; font-weight: 600; text-transform: uppercase;}
 ul li, dl, li, p {margin: 0 0 10px; font-size: 16px; font-weight: 300; color: #464849;}
 dl dt {font-weight: 500;}
@@ -152,7 +152,8 @@ CONTENT
 
 .index-content .container {flex-flow: row wrap;}
 .content .container {flex-flow: column nowrap;}
-.bottom-border {padding-bottom: 40px; margin-bottom: 40px; border-bottom: solid 3px #eeeeee;}
+.bottom-border {padding-bottom: 50px; margin-bottom: 50px; border-bottom: solid 3px #eeeeee;}
+.title .bottom-border {margin-bottom: 10px;}
 .row, .col {display: flex; flex-direction: row;}
 .row .col {padding-left: 15px; padding-right: 15px; flex-direction: column;}
 .row .col .port-image {display: block; margin: 0 0 10px; border: solid 1px rgba(0,0,0,.05);}
@@ -199,7 +200,7 @@ CONTENT
 .thumb-bg.tabbit {background: #ddc1e2;}
 
 .btn-right {
-	margin-top: 10px;
+	margin: 10px 0 40px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
