--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 	margin: 0;
 	padding: 0;
 	width: 100%;
-	background: #fefefe;
+	background: #fafafa;
 	color: #4a4e4f;
 	font-size: 16px;
 	line-height: 1.8em;
@@ -54,7 +54,7 @@ header {
 	flex-direction: row;
 	align-items: center;
 	width: 100%;
-	background: rgba(255,255,255,.85);
+	background: rgba(253,253,253,.85);
 	border-bottom: solid 1px rgba(0,0,0,.075);
 }
 
@@ -152,11 +152,14 @@ CONTENT
 
 .index-content .container {flex-flow: row wrap;}
 .content .container {flex-flow: column nowrap;}
-.bottom-border {padding-bottom: 50px; margin-bottom: 50px; border-bottom: solid 3px #eeeeee;}
+.bottom-border {padding-bottom: 70px; margin-bottom: 70px; border-bottom: solid 3px #eeeeee;}
 .title .bottom-border {margin-bottom: 10px;}
 .row, .col {display: flex; flex-direction: row;}
 .row .col {padding-left: 15px; padding-right: 15px; flex-direction: column;}
+.row .col.col-6 {flex: 50%;}
+.row .col.col-4 {flex: 33.333%;}
 .row .col .port-image {display: block; margin: 0 0 10px; border: solid 1px rgba(0,0,0,.05);}
+.port-item {margin-bottom: 15px;}
 .port-item h5 {margin: 0 0 0 5px; font-size: 14px; font-weight: 600;}
 
 .port-thumb {
@@ -197,7 +200,10 @@ CONTENT
 .port-overview dl {padding-right: 10%;}
 .thumb-bg {background: #f6f6f6;}
 .row .col .thumb-bg img {margin-bottom: 0; border: none;}
-.thumb-bg.tabbit {background: #ddc1e2;}
+.port-thumb.tabbit a:hover, .thumb-bg.tabbit {background: #dabae0;}
+.port-thumb.mp a:hover, .thumb-bg.mp {background: #92afbf;}
+.port-thumb.cm a:hover, .thumb-bg.cm {background: #c6d39e;}
+.port-thumb.gdol a:hover, .thumb-bg.gdol {background: #f0cbab;}
 
 .btn-right {
 	margin: 10px 0 40px;
