--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,8 @@ nav {display: flex;}
 	color: #4a4e4f;
 }
 
-.header-nav li a:hover {color: #0288b9; text-decoration: underline;}
+.header-nav li a:hover {color: #0288b9; transform: translate(0px, -10px);}
+.header-nav li.nav-social-icons a:hover img {filter: invert(41%) sepia(94%) saturate(4379%) hue-rotate(174deg) brightness(90%) contrast(98%);}
 .nav-social-icons img {width: 32px;}
  
 /* ------------------------------
@@ -196,7 +197,7 @@ CONTENT
 	font-weight: 600;
 }
 
-.port-overview h5 {margin-top: 10px;}
+.port-overview h5 {margin-top: 10px; margin-bottom: 20px;}
 .port-overview dl {padding-right: 10%;}
 .thumb-bg {background: #f6f6f6;}
 .row .col .thumb-bg img {margin-bottom: 0; border: none;}
@@ -220,13 +221,14 @@ a.icon-button {
 	align-items: center;
 	height: 40px;
 	margin: 0 15px 0 0;
-	padding: 0 20px;
-	background: #F6FBFC;
+	padding: 0 25px 0 20px;
+	background: #6ac8d7;
+	color: #ffffff;
 	border-radius: 20px;
-	border: solid 1px #78CDD9;
+	border: solid 1px #5db7c5;
 }
 
-a.icon-button:hover {background: #78CDD9; color: #fff;}
+a.icon-button:hover {background: #0288b9; color: #fff; border-color: #0288b9; box-shadow: inset 0px 0px 10px rgba(0,0,0,.25);}
 .btn-icon-img {width: 28px; margin-right: 10px;}
 .btn-icon-text {margin: 0; font-size: 14px; font-weight: 500; text-transform: uppercase;}
 
