HW18 : Added GDOL page content, Media Query tags for Tablet/Mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ a:hover {color: #0178a4; text-decoration: none;}
 	max-width: 1140px;
 }
 
+
 /* ------------------------------
 HEADER
 ------------------------------ */
@@ -71,7 +72,7 @@ h1#header-logo {
 }
 
 h1#header-logo a {color: #4a4e4f;}
-h1#header-logo a:hover {color: #0288b9;}
+h1#header-logo a:hover {color: #0288b9; transform: translate(0px, -10px);}
 nav {display: flex;}
 
 .header-nav {
@@ -105,10 +106,11 @@ nav {display: flex;}
 	color: #4a4e4f;
 }
 
+.nav-social-icons img {width: 32px;}
 .header-nav li a:hover {color: #0288b9; transform: translate(0px, -10px);}
 .header-nav li.nav-social-icons a:hover img {filter: invert(41%) sepia(94%) saturate(4379%) hue-rotate(174deg) brightness(90%) contrast(98%);}
-.nav-social-icons img {width: 32px;}
  
+
 /* ------------------------------
 HERO / TITLE
 ------------------------------ */
@@ -125,6 +127,7 @@ HERO / TITLE
 	width: 100%;
 	max-width: 760px;
 	font-size: 22px;
+	line-height: 1.5;
 	font-weight: 400;
 }
 
@@ -138,6 +141,7 @@ HERO / TITLE
 	font-size: 42px;
 }
 
+
 /* ------------------------------
 CONTENT
 ------------------------------ */
@@ -146,20 +150,18 @@ CONTENT
 	margin: 0;
 	padding: 20px 0 50px;
 	display: flex;
-	/* grid-template-columns: repeat(2, 50%);
-  grid-template-rows: 460px;  */
-	/* gap: 0; */
 }
 
 .index-content .container {flex-flow: row wrap;}
 .content .container {flex-flow: column nowrap;}
-.bottom-border {padding-bottom: 70px; margin-bottom: 70px; border-bottom: solid 3px #eeeeee;}
+.bottom-border {padding-bottom: 50px; margin-bottom: 70px; border-bottom: solid 3px #eeeeee;}
 .title .bottom-border {margin-bottom: 10px;}
 .row, .col {display: flex; flex-direction: row;}
 .row .col {padding-left: 15px; padding-right: 15px; flex-direction: column;}
+.row .col.col-12 {flex: 100%;}
 .row .col.col-6 {flex: 50%;}
 .row .col.col-4 {flex: 33.333%;}
-.row .col .port-image {display: block; margin: 0 0 10px; border: solid 1px rgba(0,0,0,.05);}
+.row .col .port-image {display: block; min-width: 100%; margin: 0 0 10px; border: solid 1px rgba(0,0,0,.05);}
 .port-item {margin-bottom: 15px;}
 .port-item h5 {margin: 0 0 0 5px; font-size: 14px; font-weight: 600;}
 
@@ -209,6 +211,7 @@ CONTENT
 .btn-right {
 	margin: 10px 0 40px;
 	display: flex;
+	flex-direction: row;
 	align-items: center;
 	justify-content: space-between;
 }
@@ -228,9 +231,10 @@ a.icon-button {
 	border: solid 1px #5db7c5;
 }
 
-a.icon-button:hover {background: #0288b9; color: #fff; border-color: #0288b9; box-shadow: inset 0px 0px 10px rgba(0,0,0,.25);}
+a.icon-button:hover {background: #0288b9; color: #fff; border-color: #027eac; box-shadow: inset 0px 0px 10px rgba(0,0,0,.25);}
 .btn-icon-img {width: 28px; margin-right: 10px;}
 .btn-icon-text {margin: 0; font-size: 14px; font-weight: 500; text-transform: uppercase;}
+
 
 /* ------------------------------
 FOOTER
@@ -244,6 +248,7 @@ footer {
 
 footer p {margin: 0; padding: 7px 0; font-size: 11px; line-height:30px;}
 
+
 /* ------------------------------
 MEDIA QUERIES
 ------------------------------ */
@@ -254,6 +259,10 @@ MEDIA QUERIES
 
 @media screen and (max-width: 768px) {
 	.port-thumb {width: calc(100% - 10px);}
+	.row {flex-direction: column;}
+	.row .col.col-4, .row .col.col-6 {flex: 100%;}
+	.port-item {margin-bottom: 30px;}
+	.btn-right {flex-direction: row;}
 }
 
 @media (max-width: 414px) {
