--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ HERO / TITLE
 .hero-logo {width: 160px; height: auto; margin: 0 0 30px;}
 
 .page-title {
-	margin: 0 0;
+	margin: 0 0 10px;
 	width: 100%;
 	text-align: center;
 	font-size: 42px;
@@ -200,6 +200,7 @@ CONTENT
 }
 
 .port-overview h5 {margin-top: 10px; margin-bottom: 20px;}
+.port-overview h5::after {display: block; margin-top: 20px; content: ""; height: 1px; width: 25px; background: #999c9d;}
 .port-overview dl {padding-right: 10%;}
 .thumb-bg {background: #f6f6f6;}
 .row .col .thumb-bg img {margin-bottom: 0; border: none;}
@@ -270,6 +271,9 @@ MEDIA QUERIES
 	h1#header-logo {display: none;}
 	nav {width: 100%;}
 	.hero .tagline {font-size: 16px}
+	.content {padding: 0;}
 	.btn-right a.icon-button {margin: 0; padding: 0 20px;}
 	.btn-icon-img {display: none;}
+	.port-thumb-img {order: 1; margin-bottom: 20px;}
+	.port-overview {order: 2;}
 }
